		</ul>
		<hr />

		<h3>Version 03.01.00</h3>
		<h4>Enhancements</h4>
		<ul>
			<li>Updated to build against DNN Platform 9.10.0. (<a href="https://github.com/WillStrohl/dnnextensions/pulls/237" target="_blank">Issue 237</a>, thanks <a href="https://github.com/WillStrohl" target="_blank">@WillStrohl</a>!)</li>
			<li>Updated to build against .NET Framework 4.8. (<a href="https://github.com/WillStrohl/dnnextensions/pulls/237" target="_blank">Issue 237</a>, thanks <a href="https://github.com/WillStrohl" target="_blank">@WillStrohl</a>!)</li>
			<!--
			<li>SI:  (<a href="https://github.com/WillStrohl/dnnextensions/issues/" target="_blank">Issue </a>, thanks <a href="https://github.com/" target="_blank">@</a>!)</li>
			-->
		</ul>
		<h4>Maintenence &amp Bug Fixes</h4>
		<ul>
			<li>Updated the build scripts to work against the latest upendodnn generator build scripts.</li>
			<!--
			<li> (<a href="https://github.com/WillStrohl/dnnextensions/issues/" target="_blank">Issue </a>, thanks <a href="https://github.com/" target="_blank">@</a>!)</li>
			-->
		</ul>
		<hr />

		<h3>Version 03.00.00</h3>
		<h4>Enhancements</h4>
		<ul>
			<li>Increased minimum supported version to DNN 9.4.0, Thanks <a href="https://github.com/WillStrohl" target="_blank">@WillStrohl</a>!</li>
			<li>Now generating and releasing a Symbols package, Thanks <a href="https://github.com/WillStrohl" target="_blank">@WillStrohl</a>!</li>
		</ul>
		<h4>Maintenence &amp Bug Fixes</h4>
		<ul>			
			<li>Fixed install/upgrade issue with SQL provider in version 2.0, Thanks <a href="https://github.com/WillStrohl" target="_blank">@WillStrohl</a>, <a href="https://github.com/MaiklT" target="_blank">@MaiklT</a>, and <a href="https://github.com/moorecreative" target="_blank">@moorecreative</a>!</li>
		</ul>
		<hr />

		<p>For more information about this and previous releases of this module, <a href="https://willstrohl.github.io/dnnextensions/" target="_blank">visit the project website</a>.</p>

	</div>
</div>